--- a/poc/src/main/resources/org/epa/mda/poc/poc.ProductRegistration-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/poc.ProductRegistration-taskform.form
@@ -4,16 +4,24 @@
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
 <field position="0" name="product_brandName" type="InputText" id="803515174">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;brandName (product)quot;"/>
+<property name="fieldRequired" value="true"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;brandName (product)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
 <property name="outputBinding" value="product/brandName"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
 <field position="1" name="product_companyName" type="InputText" id="597684273">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;companyName (product)quot;"/>
+<property name="fieldRequired" value="true"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;companyName (product)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
 <property name="outputBinding" value="product/companyName"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
@@ -26,25 +34,37 @@
 <property name="fieldClass" value="java.lang.String"/>
 </field>
 <field position="3" name="product_address" type="InputText" id="1735714277">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;address (product)quot;"/>
+<property name="fieldRequired" value="true"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;address (product)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
 <property name="outputBinding" value="product/address"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
 <field position="4" name="product_city" type="InputText" id="625497291">
-<property name="fieldRequired" value="false"/>
+<property name="fieldRequired" value="true"/>
 <property name="groupWithPrevious" value="true"/>
-<property name="label" value="quot;enquot;,quot;city (product)quot;"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;city (product)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
 <property name="outputBinding" value="product/city"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
 <field position="5" name="product_state" type="InputText" id="863795097">
-<property name="fieldRequired" value="false"/>
+<property name="fieldRequired" value="true"/>
 <property name="groupWithPrevious" value="true"/>
-<property name="label" value="quot;enquot;,quot;state (product)quot;"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;state (product)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
 <property name="outputBinding" value="product/state"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
@@ -64,28 +84,18 @@
 <property name="outputBinding" value="product/zip"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
+<field position="8" name=":decorator_0" type="Separator" id="711137683">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="readonly" value="false"/>
+<property name="fieldClass" value="Separator"/>
+</field>
 <field position="9" name="product_unleadedPremGas" type="CheckBox" id="2075924027">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="false"/>
 <property name="label" value="quot;enquot;,quot;unleadedPremGas (product)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="product/unleadedPremGas"/>
-<property name="fieldClass" value="java.lang.Boolean"/>
-</field>
-<field position="11" name="product_unleadedRegGas" type="CheckBox" id="2077982477">
-<property name="fieldRequired" value="false"/>
-<property name="groupWithPrevious" value="false"/>
-<property name="label" value="quot;enquot;,quot;unleadedRegGas (product)quot;"/>
-<property name="readonly" value="false"/>
-<property name="outputBinding" value="product/unleadedRegGas"/>
-<property name="fieldClass" value="java.lang.Boolean"/>
-</field>
-<field position="13" name="product_unleadedMidGas" type="CheckBox" id="1378968787">
-<property name="fieldRequired" value="false"/>
-<property name="groupWithPrevious" value="false"/>
-<property name="label" value="quot;enquot;,quot;unleadedMidGas (product)quot;"/>
-<property name="readonly" value="false"/>
-<property name="outputBinding" value="product/unleadedMidGas"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
 </field>
 <field position="10" name="product_grade1Diesel" type="CheckBox" id="1676274512">
@@ -96,11 +106,13 @@
 <property name="outputBinding" value="product/grade1Diesel"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
 </field>
-<field position="8" name=":decorator_0" type="Separator" id="711137683">
+<field position="11" name="product_unleadedRegGas" type="CheckBox" id="2077982477">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;unleadedRegGas (product)quot;"/>
 <property name="readonly" value="false"/>
-<property name="fieldClass" value="Separator"/>
+<property name="outputBinding" value="product/unleadedRegGas"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
 </field>
 <field position="12" name="product_grade2Diesel" type="CheckBox" id="1704654172">
 <property name="fieldRequired" value="false"/>
@@ -108,6 +120,14 @@
 <property name="label" value="quot;enquot;,quot;grade2Diesel (product)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="product/grade2Diesel"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="13" name="product_unleadedMidGas" type="CheckBox" id="1378968787">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;unleadedMidGas (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/unleadedMidGas"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
 </field>
 <field position="14" name="product_bioDiesel" type="CheckBox" id="222889738">
@@ -127,7 +147,7 @@
 </field>
 <field position="16" name=":decorator_1" type="Separator" id="2046106241">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="fieldClass" value="Separator"/>
 </field>
