--- a/poc/src/main/resources/org/epa/mda/poc/ReviewReportData-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/ReviewReportData-taskform.form
@@ -3,4 +3,77 @@
 <property name="name" value="ReviewReportData-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="product_companyName" type="InputText" id="213919493">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;companyName (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/companyName"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="product_companyId" type="InputText" id="1118207759">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;companyId (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/companyId"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="product_address" type="InputText" id="1233315359">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;address (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/address"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="product_city" type="InputText" id="2085788127">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;city (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/city"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="product_state" type="InputText" id="1764783091">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;state (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/state"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="6" name="product_zip" type="InputText" id="1126057410">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;zip (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/zip"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="7" name="product_province" type="InputText" id="508480206">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;province (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/province"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="product_id" type="InputText" id="91030926">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;id (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/id"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="8" name="2092513787" type="InputText" id="2092513787">
+<property name="fieldRequired" value="true"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Report Yearquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="productIn" name="#E9E371" type="dataModelerEntry" outId="" value="org.epa.mda.poc.Product" id="product"/>
 </form>
