--- a/poc/src/main/resources/org/epa/mda/poc/UpdateReview-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/UpdateReview-taskform.form
@@ -30,6 +30,7 @@
 </field>
 <field position="3" name="product_companyId" type="InputText" id="224151625">
 <property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
 <property name="label" value="quot;enquot;,quot;companyId (product)quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="productIn/companyId"/>
@@ -58,6 +59,7 @@
 </field>
 <field position="7" name="product_state" type="InputText" id="268635723">
 <property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
 <property name="label" value="quot;enquot;,quot;state (product)quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="productIn/state"/>
@@ -65,13 +67,19 @@
 </field>
 <field position="8" name="product_province" type="InputText" id="1489990617">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;province (product)quot;"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;province (product)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
 <property name="inputBinding" value="productIn/province"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
 <field position="9" name="product_zip" type="InputText" id="56587547">
 <property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
 <property name="label" value="quot;enquot;,quot;zip (product)quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="productIn/zip"/>
