--- a/poc/src/main/resources/org/epa/mda/poc/MemoToReporter-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/MemoToReporter-taskform.form
@@ -3,4 +3,16 @@
 <property name="name" value="MemoToReporter-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="responseStr" type="InputTextArea" id="558679906">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;responseStrIn (responseStr)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="true"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="inputBinding" value="responseStrIn"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="responseStrIn" name="#E9E371" type="basicType" outId="" value="java.lang.String" id="responseStr"/>
 </form>
