{/poc/src/main/resources/org/epa/mda/poc/MemoToReporter-taskform.form}

--- a/poc/src/main/resources/org/epa/mda/poc/MemoToReporter-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/MemoToReporter-taskform.form
@@ -3,12 +3,14 @@
 <property name="name" value="MemoToReporter-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="response" type="InputText" id="169522777">
+<field position="0" name="response" type="InputTextArea" id="169522777">
 <property name="fieldRequired" value="false"/>
+<property name="height" value="15"/>
 <property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Message from EPA:quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="true"/>
+<property name="size" value="100"/>
 <property name="isHTML" value="false"/>
 <property name="hideContent" value="false"/>
 <property name="inputBinding" value="responseStrIn"/>
